<resources>
    <string name="app_name">LogBook1</string>
    <string name="input_Hint">0</string>
    <string name="result_Text">Result:</string>
    <string name="zero">0</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">x</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="calculator">Calculator</string>
    <string name="invalid_input">Invalid input</string>
    <string name="error">Error</string>
    <string name="subtraction">-</string>
</resources>